--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 		</footer>
 
 		<!-- MODAL -->
-		<!-- <div class="backdrop is-hidden" data-modal>
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button class="modal__close-button" type="button" data-modal-close>
 					<svg class="modal__close-icon">
@@ -552,19 +552,23 @@
 						<svg class="info-form__checkbox-current" width="16" height="15">
 							<use href="./images/sprite.svg#icon-check"></use>
 						</svg>
-						I agree with the letter and accept the
-						<button class="info-form__btn-conditions" type="button">Terms and Conditions</button>
+						<div>
+							<span>I agree with the letter and accept </span>
+							<button class="info-form__btn-conditions" type="button">
+								the Terms and Conditions
+							</button>
+						</div>
 					</label>
 
 					<button class="info-form__button">Send</button>
 				</form>
 			</div>
-		</div> -->
+		</div>
 
 		<!-- <script src="./js/index.js"></script> -->
-		<!-- <script src="./js/modal.js"></script>
+		<script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
-		<script src="./js/footer-form.js"></script> -->
+		<script src="./js/footer-form.js"></script>
 		<!-- <script src="./js/theme.js"></script> -->
 	</body>
 </html>
