--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 						</li>
 					</ul>
 
-					<!-- <ul class="projects">
+					<ul class="projects">
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
@@ -92,7 +92,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/web-site/technoduck.jpg"
 										alt="Technoduck"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--web">
 										<p class="projects__details">
@@ -116,7 +115,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
 										alt="Poster New Orlean vs Golden Star"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--design">
 										<p class="projects__details">
@@ -140,7 +138,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
 										alt="Seafood Restaurant "
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
@@ -164,7 +161,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/marketing/project-prime.jpg"
 										alt="Project Prime"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--marketing">
 										<p class="projects__details">
@@ -188,7 +184,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/apps/project-boxes.jpg"
 										alt="Project Boxes"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
@@ -212,7 +207,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
 										alt="Inspiration has no Borders"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--web">
 										<p class="projects__details">
@@ -236,7 +230,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/design/limited-edition.jpg"
 										alt="Limited Edition"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--design">
 										<p class="projects__details">
@@ -260,7 +253,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/marketing/project-lab.jpg"
 										alt="Project LAB"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--marketing">
 										<p class="projects__details">
@@ -284,7 +276,6 @@
 										class="projects__img"
 										src="/images/portfolio/desktop/apps/growing-business.jpg"
 										alt="Growing Business"
-										width="370"
 									/>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
@@ -300,7 +291,7 @@
 								</div>
 							</a>
 						</li>
-					</ul> -->
+					</ul>
 				</div>
 			</section>
 		</main>
