--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a class="logo logo--top" href="/index.html">
 					<span class="logo--accent">Web</span>Studio</a
 				>
-				<nav class="nav mobmenu-hidden">
+				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__item">
 							<a class="nav__link nav__link--current" href="/index.html">Studio</a>
@@ -37,7 +37,7 @@
 					</ul>
 				</nav>
 
-				<div class="header-address mobmenu-hidden">
+				<div class="header-address">
 					<a class="header-address__link" href="mailto:info@devstudio.com">
 						<svg class="header-address__icon" width="16" height="12">
 							<use href="./images/sprite.svg#icon-envelope"></use>
@@ -51,16 +51,9 @@
 						+1 212-772-4150</a
 					>
 				</div>
-				<button class="mobmenu__button" type="button">
-					<svg class="mobmenu__button-icon" width="40" height="40">
-						<use
-							class="mobmenu__button-icon--close"
-							href="./images/sprite.svg#icon-mobmenu-close"
-						></use>
-						<use
-							class="mobmenu__button-icon--open"
-							href="./images/sprite.svg#icon-mobmenu-open"
-						></use>
+				<button class="mobmenu__button" type="button" data-menu-open>
+					<svg class="mobmenu__button-icon" width="40" height="40" aria-label="mobile menu button">
+						<use href="./images/sprite.svg#icon-mobmenu-open"></use>
 					</svg>
 				</button>
 				<!-- <button class="theme-btn">theme</button> -->
@@ -565,10 +558,55 @@
 			</div>
 		</div>
 
+		<div class="mob-menu is-hidden" data-menu>
+			<button class="mobmenu__button" type="button" data-menu-close>
+				<svg class="mobmenu__button-icon" width="40" height="40" aria-label="mobile menu button">
+					<use href="./images/sprite.svg#icon-mobmenu-close"></use>
+				</svg>
+			</button>
+
+			<nav class="mob-nav">
+				<ul class="mob-nav__list">
+					<li class="mob-nav__item">
+						<a class="mob-nav__link nav__link--current" href="/index.html">Studio</a>
+					</li>
+					<li class="mob-nav__item">
+						<a class="mob-nav__link" href="/portfolio.html">Portfolio</a>
+					</li>
+					<li class="mob-nav__item">
+						<a class="mob-nav__link mob-nav__link--contacts" href="#contacts">Contacts</a>
+					</li>
+				</ul>
+			</nav>
+
+			<div class="mob-address">
+				<a class="mob-address__link" href="tel:+12127724150"> +1 212-772-4150</a>
+				<a class="mob-address__link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+			</div>
+			<ul class="mob-social">
+				<li class="mob-social__item">
+					<a class="mob-social__link" href="https://instagram.com">Instagram</a>
+				</li>
+
+				<li class="mob-social__item">
+					<a class="mob-social__link" href="https://twitter.com">Twitter</a>
+				</li>
+
+				<li class="mob-social__item">
+					<a class="mob-social__link" href="https://facebook.com">Facebook</a>
+				</li>
+
+				<li class="mob-social__item">
+					<a class="mob-social__link" href="https://linkedin.com">LinkedIn</a>
+				</li>
+			</ul>
+		</div>
+
 		<!-- <script src="./js/index.js"></script> -->
 		<script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
 		<script src="./js/footer-form.js"></script>
 		<!-- <script src="./js/theme.js"></script> -->
+		<script src="./js/mob-menu.js"></script>
 	</body>
 </html>
