responsive img studio page

--- a/index.html
+++ b/index.html
@@ -137,36 +137,78 @@
 					<h2 class="section-title">What we do</h2>
 					<ul class="services__list">
 						<li class="services__item">
-							<img
-								class="services__img"
-								src="/images/servises/desktop/coding.jpg"
-								alt="coding"
-								width="370"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/services/desktop/coding/coding.webp    1x,
+										./images/services/desktop/coding/coding@2x.webp 2x
+									"
+									type="image/webp"
+								/>
+
+								<img
+									class="services__img"
+									srcset="
+										./images/services/desktop/coding/coding.jpg    1x,
+										./images/services/desktop/coding/coding@2x.jpg 2x
+									"
+									src="./images/services/desktop/coding/coding.jpg"
+									alt="coding"
+									width="370"
+								/>
+							</picture>
 							<div class="services__desc">
 								<h3 class="services__subject">DESKTOP APPS</h3>
 							</div>
 						</li>
 
 						<li class="services__item">
-							<img
-								class="services__img"
-								src="/images/servises/desktop/testing.jpg"
-								alt="testing"
-								width="370"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/services/desktop/testing/testing.webp    1x,
+										./images/services/desktop/testing/testing@2x.webp 2x
+									"
+									type="image/webp"
+								/>
+
+								<img
+									class="services__img"
+									srcset="
+										./images/services/desktop/testing/testing.jpg    1x,
+										./images/services/desktop/testing/testing@2x.jpg 2x
+									"
+									src="./images/services/desktop/testing/testing.jpg"
+									alt="testing"
+									width="370"
+								/>
+							</picture>
 							<div class="services__desc">
 								<h3 class="services__subject">Mobile APPS</h3>
 							</div>
 						</li>
 
 						<li class="services__item">
-							<img
-								class="services__img"
-								src="/images/servises/desktop/designing.jpg"
-								alt="designing"
-								width="370"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/services/desktop/designing/designing.webp    1x,
+										./images/services/desktop/designing/designing@2x.webp 2x
+									"
+									type="image/webp"
+								/>
+
+								<img
+									class="services__img"
+									srcset="
+										./images/services/desktop/designing/designing.jpg    1x,
+										./images/services/desktop/designing/designing@2x.jpg 2x
+									"
+									src="./images/services/desktop/designing/designing.jpg"
+									alt="designing"
+									width="370"
+								/>
+							</picture>
 							<div class="services__desc">
 								<h3 class="services__subject">DESIGN SOLUTIONS</h3>
 							</div>
@@ -181,11 +223,40 @@
 					<h2 class="section-title">Our Team</h2>
 					<ul class="team__list">
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/walker.jpg"
-								alt="Christopher Walker"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/team/desktop/walker/walker-d.webp    270w,
+										./images/team/desktop/walker/walker-d@2x.webp 540w
+									"
+									sizes="270px"
+									type="image/webp"
+									media="(min-width: 1200px)"
+								/>
+								<source
+									srcset="
+										./images/team/tab/walker/walker-t.webp    354w,
+										./images/team/tab/walker/walker-t@2x.webp 708w
+									"
+									sizes="354px"
+									type="image/webp"
+									media="(min-width: 768px)"
+								/>
+								<source
+									srcset="
+										./images/team/mob/walker/walker-m.webp    450w,
+										./images/team/mob/walker/walker-m@2x.webp 900w
+									"
+									sizes="(min-width: 480px) 450px"
+									type="image/webp"
+								/>
+
+								<img
+									class="team__img"
+									src="./images/team/desktop/walker/walker-d@2x.jpg"
+									alt="Christopher Walker"
+								/>
+							</picture>
 							<h3 class="team__name">Christopher Walker</h3>
 							<p class="team__desc">Product Designer</p>
 							<ul class="social social--team">
@@ -222,7 +293,40 @@
 						</li>
 
 						<li class="team__item">
-							<img class="team__img" src="/images/team/desktop/evans.jpg" alt="Kylie Evans" />
+							<picture>
+								<source
+									srcset="
+										./images/team/desktop/evans/evans-d.webp    270w,
+										./images/team/desktop/evans/evans-d@2x.webp 540w
+									"
+									sizes="270px"
+									type="image/webp"
+									media="(min-width: 1200px)"
+								/>
+								<source
+									srcset="
+										./images/team/tab/evans/evans-t.webp    354w,
+										./images/team/tab/evans/evans-t@2x.webp 708w
+									"
+									sizes="354px"
+									type="image/webp"
+									media="(min-width: 768px)"
+								/>
+								<source
+									srcset="
+										./images/team/mob/evans/evans-m.webp    450w,
+										./images/team/mob/evans/evans-m@2x.webp 900w
+									"
+									sizes="(min-width: 480px) 450px"
+									type="image/webp"
+								/>
+
+								<img
+									class="team__img"
+									src="./images/team/desktop/evans/evans-d@2x.jpg"
+									alt="Kylie Evans"
+								/>
+							</picture>
 							<h3 class="team__name">Kylie Evans</h3>
 							<p class="team__desc">Frontend Developer</p>
 							<ul class="social social--team">
@@ -259,7 +363,40 @@
 						</li>
 
 						<li class="team__item">
-							<img class="team__img" src="/images/team/desktop/harris.jpg" alt="Ryan Harris" />
+							<picture>
+								<source
+									srcset="
+										./images/team/desktop/harris/harris-d.webp    270w,
+										./images/team/desktop/harris/harris-d@2x.webp 540w
+									"
+									sizes="270px"
+									type="image/webp"
+									media="(min-width: 1200px)"
+								/>
+								<source
+									srcset="
+										./images/team/tab/harris/harris-t.webp    354w,
+										./images/team/tab/harris/harris-t@2x.webp 708w
+									"
+									sizes="354px"
+									type="image/webp"
+									media="(min-width: 768px)"
+								/>
+								<source
+									srcset="
+										./images/team/mob/harris/harris-m.webp    450w,
+										./images/team/mob/harris/harris-m@2x.webp 900w
+									"
+									sizes="(min-width: 480px) 450px"
+									type="image/webp"
+								/>
+
+								<img
+									class="team__img"
+									src="./images/team/desktop/harris/harris-d@2x.jpg"
+									alt="Ryan Harris"
+								/>
+							</picture>
 							<h3 class="team__name">Ryan Harris</h3>
 							<p class="team__desc">Marketing</p>
 							<ul class="social social--team">
@@ -296,7 +433,40 @@
 						</li>
 
 						<li class="team__item">
-							<img class="team__img" src="/images/team/desktop/moore.jpg" alt="Tyler Moore" />
+							<picture>
+								<source
+									srcset="
+										./images/team/desktop/moore/moore-d.webp    270w,
+										./images/team/desktop/moore/moore-d@2x.webp 540w
+									"
+									sizes="270px"
+									type="image/webp"
+									media="(min-width: 1200px)"
+								/>
+								<source
+									srcset="
+										./images/team/tab/moore/moore-t.webp    354w,
+										./images/team/tab/moore/moore-t@2x.webp 708w
+									"
+									sizes="354px"
+									type="image/webp"
+									media="(min-width: 768px)"
+								/>
+								<source
+									srcset="
+										./images/team/mob/moore/moore-m.webp    450w,
+										./images/team/mob/moore/moore-m@2x.webp 900w
+									"
+									sizes="(min-width: 480px) 450px"
+									type="image/webp"
+								/>
+
+								<img
+									class="team__img"
+									src="./images/team/desktop/moore/moore-d@2x.jpg"
+									alt="Tyler Moore"
+								/>
+							</picture>
 							<h3 class="team__name">Tyler Moore</h3>
 							<p class="team__desc">UI Designer</p>
 							<ul class="social social--team">
