responsive img porfolio page

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 										./images/team/mob/moore/moore-m.webp    450w,
 										./images/team/mob/moore/moore-m@2x.webp 900w
 									"
-									sizes="(min-width: 480px) 450px"
+									sizes="(min-width: 480px) 450px, 100vw"
 									type="image/webp"
 								/>
 
