--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/web-site/technoduck.jpg"
-										alt="Technoduck"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/web-site/technoduck/technoduck-d.webp    370w,
+												./images/portfolio/desktop/web-site/technoduck/technoduck-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/web-site/technoduck/technoduck-t.webp    354w,
+												./images/portfolio/tab/web-site/technoduck/technoduck-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/web-site/technoduck/technoduck-m.webp    450w,
+												./images/portfolio/mob/web-site/technoduck/technoduck-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/web-site/technoduck/technoduck-d@2x.jpg"
+											alt="Technoduck"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--web">
 										<p class="projects__details">
 											Technoduck is a state-of-the-art coronavirus distribution platform. Companies
@@ -104,11 +132,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
-										alt="Poster New Orlean vs Golden Star"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-d.webp    370w,
+												./images/portfolio/desktop/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-t.webp    354w,
+												./images/portfolio/tab/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-m.webp    450w,
+												./images/portfolio/mob/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/design/poster-new-orlean-vs-golden-star/poster-new-orlean-vs-golden-star-d@2x.jpg"
+											alt="Poster New Orlean vs Golden Star"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--design">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -127,11 +183,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
-										alt="Seafood Restaurant "
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/apps/seafood-restaurant/seafood-restaurant-d.webp    370w,
+												./images/portfolio/desktop/apps/seafood-restaurant/seafood-restaurant-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/apps/seafood-restaurant/seafood-restaurant-t.webp    354w,
+												./images/portfolio/tab/apps/seafood-restaurant/seafood-restaurant-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/apps/seafood-restaurant/seafood-restaurant-m.webp    450w,
+												./images/portfolio/mob/apps/seafood-restaurant/seafood-restaurant-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/apps/seafood-restaurant/seafood-restaurant-d@2x.jpg"
+											alt="Seafood Restaurant"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -150,11 +234,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/marketing/project-prime.jpg"
-										alt="Project Prime"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/marketing/project-prime/project-prime-d.webp    370w,
+												./images/portfolio/desktop/marketing/project-prime/project-prime-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/marketing/project-prime/project-prime-t.webp    354w,
+												./images/portfolio/tab/marketing/project-prime/project-prime-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/marketing/project-prime/project-prime-m.webp    450w,
+												./images/portfolio/mob/marketing/project-prime/project-prime-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/marketing/project-prime/project-prime-d@2x.jpg"
+											alt="Project Prime"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--marketing">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -173,11 +285,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/apps/project-boxes.jpg"
-										alt="Project Boxes"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/apps/project-boxes/project-boxes-d.webp    370w,
+												./images/portfolio/desktop/apps/project-boxes/project-boxes-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/apps/project-boxes/project-boxes-t.webp    354w,
+												./images/portfolio/tab/apps/project-boxes/project-boxes-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/apps/project-boxes/project-boxes-m.webp    450w,
+												./images/portfolio/mob/apps/project-boxes/project-boxes-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/apps/project-boxes/project-boxes-d@2x.jpg"
+											alt="Project Boxes"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -196,11 +336,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
-										alt="Inspiration has no Borders"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/web-site/inspiration-has-no-borders/inspiration-has-no-borders-d.webp    370w,
+												./images/portfolio/desktop/web-site/inspiration-has-no-borders/inspiration-has-no-borders-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/web-site/inspiration-has-no-borders/inspiration-has-no-borders-t.webp    354w,
+												./images/portfolio/tab/web-site/inspiration-has-no-borders/inspiration-has-no-borders-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/web-site/inspiration-has-no-borders/inspiration-has-no-borders-m.webp    450w,
+												./images/portfolio/mob/web-site/inspiration-has-no-borders/inspiration-has-no-borders-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/web-site/inspiration-has-no-borders/inspiration-has-no-borders-d@2x.jpg"
+											alt="Inspiration has no Borders"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--web">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -219,11 +387,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/design/limited-edition.jpg"
-										alt="Limited Edition"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/design/limited-edition/limited-edition-d.webp    370w,
+												./images/portfolio/desktop/design/limited-edition/limited-edition-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/design/limited-edition/limited-edition-t.webp    354w,
+												./images/portfolio/tab/design/limited-edition/limited-edition-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/design/limited-edition/limited-edition-m.webp    450w,
+												./images/portfolio/mob/design/limited-edition/limited-edition-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/design/limited-edition/limited-edition-d@2x.jpg"
+											alt="Limited Edition"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--design">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -242,11 +438,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/marketing/project-lab.jpg"
-										alt="Project LAB"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/marketing/project-lab/project-lab-d.webp    370w,
+												./images/portfolio/desktop/marketing/project-lab/project-lab-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/marketing/project-lab/project-lab-t.webp    354w,
+												./images/portfolio/tab/marketing/project-lab/project-lab-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/marketing/project-lab/project-lab-m.webp    450w,
+												./images/portfolio/mob/marketing/project-lab/project-lab-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/marketing/project-lab/project-lab-d@2x.jpg"
+											alt="Project LAB"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--marketing">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
@@ -265,11 +489,39 @@
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
-									<img
-										class="projects__img"
-										src="/images/portfolio/desktop/apps/growing-business.jpg"
-										alt="Growing Business"
-									/>
+									<picture>
+										<source
+											srcset="
+												./images/portfolio/desktop/apps/growing-business/growing-business-d.webp    370w,
+												./images/portfolio/desktop/apps/growing-business/growing-business-d@2x.webp 740w
+											"
+											sizes="370px"
+											type="image/webp"
+											media="(min-width: 1200px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/tab/apps/growing-business/growing-business-t.webp    354w,
+												./images/portfolio/tab/apps/growing-business/growing-business-t@2x.webp 708w
+											"
+											sizes="354px"
+											type="image/webp"
+											media="(min-width: 768px)"
+										/>
+										<source
+											srcset="
+												./images/portfolio/mob/apps/growing-business/growing-business-m.webp    450w,
+												./images/portfolio/mob/apps/growing-business/growing-business-m@2x.webp 900w
+											"
+											sizes="(min-width: 480px) 450px, 100vw"
+											type="image/webp"
+										/>
+										<img
+											class="projects__img"
+											src="./images/portfolio/desktop/apps/growing-business/growing-business-d@2x.jpg"
+											alt="Growing Business"
+										/>
+									</picture>
 									<div class="projects__overlay projects__overlay--apps">
 										<p class="projects__details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
