--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 	<body>
 		<header class="header">
 			<div class="container">
-				<a class="logo logo--top" href="/index.html">
+				<a class="logo logo--top" href="./index.html">
 					<span class="logo--accent">Web</span>Studio</a
 				>
 				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__item">
-							<a class="nav__link nav__link--current" href="/index.html">Studio</a>
+							<a class="nav__link nav__link--current" href="./index.html">Studio</a>
 						</li>
 						<li class="nav__item">
-							<a class="nav__link" href="/portfolio.html">Portfolio</a>
+							<a class="nav__link" href="./portfolio.html">Portfolio</a>
 						</li>
 						<li class="nav__item">
 							<a class="nav__link" href="#contacts">Contacts</a>
@@ -565,7 +565,7 @@
 		<footer class="footer" id="contacts">
 			<div class="container">
 				<div class="footer-address">
-					<a class="logo logo--bottom" href="/index.html">
+					<a class="logo logo--bottom" href="./index.html">
 						<span class="logo--accent">Web</span>Studio
 					</a>
 
@@ -728,6 +728,7 @@
 			</div>
 		</div>
 
+		<!-- MOBILE MENU -->
 		<div class="mob-menu is-hidden" data-menu>
 			<button class="mobmenu__button" type="button" data-menu-close>
 				<svg class="mobmenu__button-icon" width="40" height="40" aria-label="mobile menu button">
@@ -738,10 +739,10 @@
 			<nav class="mob-nav">
 				<ul class="mob-nav__list">
 					<li class="mob-nav__item">
-						<a class="mob-nav__link nav__link--current" href="/index.html">Studio</a>
+						<a class="mob-nav__link nav__link--current" href="./index.html">Studio</a>
 					</li>
 					<li class="mob-nav__item">
-						<a class="mob-nav__link" href="/portfolio.html">Portfolio</a>
+						<a class="mob-nav__link" href="./portfolio.html">Portfolio</a>
 					</li>
 					<li class="mob-nav__item">
 						<a class="mob-nav__link mob-nav__link--contacts" href="#contacts">Contacts</a>
